<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.example.weatha.util.Utils" />

        <variable
            name="response"
            type="com.example.weatha.model.network.responses.WeatherResponse" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/match"
        tools:context=".view.activity.WeatherDetailActivity">

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_380"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/image_view_bg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@null"
                android:src="#4DBAD8" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_80"
                android:layout_gravity="bottom"
                android:contentDescription="@null"
                android:scaleType="fitXY"
                android:src="@drawable/image_bg" />

            <androidx.constraintlayout.widget.ConstraintLayout
                style="@style/match"
                android:layout_marginStart="@dimen/size_16"
                android:layout_marginTop="@dimen/size_16">

                <TextView
                    android:id="@+id/tvCity"
                    style="@style/match_wrap"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:text="@{String.format(@string/city_country_value,response.name,response.sys.country)}"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_29"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvTime"
                    style="@style/match_wrap"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:text="@{Utils.getDateFromUnixTime(response.dt)}"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_19"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvCity" />

                <ImageView
                    android:id="@+id/ivClimate"
                    android:layout_width="@dimen/size_60"
                    android:layout_height="@dimen/size_60"
                    android:layout_marginStart="@dimen/size_16"
                    android:layout_marginTop="@dimen/size_16"
                    android:src="@drawable/cloudy"
                    app:layout_constraintBottom_toTopOf="@+id/tvClimateDegree"
                    app:layout_constraintEnd_toStartOf="@+id/tvClimateDegree"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvTime" />

                <TextView
                    android:id="@+id/tvClimateDegree"
                    style="@style/wrap"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:text="@{Utils.getCelsiusFromKelvin(response.main.temp)}"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_75"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Test" />

                <TextView
                    android:id="@+id/tvClimateName"
                    style="@style/match_wrap"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="center"
                    android:text="@{response.weather.get(0).main}"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_17"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvClimateDegree" />

                <TextView
                    android:id="@+id/tvClimateDesc"
                    style="@style/match_wrap"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="center"
                    android:text="@{response.weather.get(0).description}"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_14"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvClimateName" />

                <ImageView
                    android:id="@+id/ivSunRise"
                    android:layout_width="@dimen/size_50"
                    android:layout_height="@dimen/size_50"
                    android:layout_marginStart="@dimen/size_66"
                    android:layout_marginTop="@dimen/size_26"
                    android:layout_marginEnd="@dimen/size_16"
                    android:src="@drawable/sunrise"
                    app:layout_constraintEnd_toStartOf="@id/tvSunrise"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvClimateName" />

                <TextView
                    android:id="@+id/tvSunrise"
                    style="@style/wrap"
                    android:layout_marginStart="@dimen/size_16"
                    android:fontFamily="sans-serif-condensed"
                    android:src="@mipmap/ic_launcher"
                    android:text="@{Utils.getTimeFromUnixTime(response.sys.sunrise)}"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toTopOf="@+id/ivSunRise"
                    app:layout_constraintEnd_toEndOf="@+id/ivSunSet"
                    app:layout_constraintStart_toStartOf="@id/tvSunrise"
                    app:layout_constraintTop_toBottomOf="@+id/ivSunRise" />

                <ImageView
                    android:id="@+id/ivSunSet"
                    android:layout_width="@dimen/size_50"
                    android:layout_height="@dimen/size_50"
                    android:layout_marginTop="@dimen/size_26"
                    android:layout_marginEnd="@dimen/size_16"
                    android:src="@drawable/sunset"
                    app:layout_constraintEnd_toStartOf="@+id/tvSunSet"
                    app:layout_constraintTop_toBottomOf="@+id/tvClimateName" />

                <TextView
                    android:id="@+id/tvSunSet"
                    style="@style/wrap"
                    android:layout_marginEnd="@dimen/size_16"
                    android:src="@mipmap/ic_launcher"
                    android:text="@{Utils.getTimeFromUnixTime(response.sys.sunset)}"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toTopOf="@+id/ivSunSet"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/ivSunSet"
                    app:layout_constraintTop_toBottomOf="@+id/ivSunSet" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </FrameLayout>

        <TextView
            android:id="@+id/tvMinTemp"
            style="@style/text_view_wrap"
            android:layout_marginStart="@dimen/size_32"
            android:layout_marginTop="@dimen/size_16"
            android:text="@string/min_temp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

        <TextView
            android:id="@+id/tvMinTempValue"
            style="@style/text_view_wrap_medium"
            android:layout_marginTop="@dimen/size_16"
            android:layout_marginEnd="@dimen/size_32"
            android:text="@{Utils.getCelsiusFromKelvin(response.main.temp_min)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

        <TextView
            android:id="@+id/tvMaxTemp"
            style="@style/text_view_wrap"
            android:layout_marginStart="@dimen/size_32"
            android:layout_marginTop="@dimen/size_16"
            android:text="@string/max_temp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvMinTemp" />

        <TextView
            android:id="@+id/tvMaxTempValue"
            style="@style/text_view_wrap_medium"
            android:layout_marginTop="@dimen/size_16"
            android:layout_marginEnd="@dimen/size_32"
            android:text="@{Utils.getCelsiusFromKelvin(response.main.temp_max)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvMinTempValue" />

        <TextView
            android:id="@+id/tvHumidity"
            style="@style/text_view_wrap"
            android:layout_marginStart="@dimen/size_32"
            android:layout_marginTop="@dimen/size_16"
            android:text="@string/humidity"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvMaxTemp" />

        <TextView
            android:id="@+id/tvHumidityValue"
            style="@style/text_view_wrap_medium"
            android:layout_marginTop="@dimen/size_16"
            android:layout_marginEnd="@dimen/size_32"
            android:text="@{String.format(@string/humidity_value,response.main.humidity)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvMaxTempValue" />

        <TextView
            android:id="@+id/tvPressure"
            style="@style/text_view_wrap"
            android:layout_marginStart="@dimen/size_32"
            android:layout_marginTop="@dimen/size_16"
            android:text="@string/pressure"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvHumidity" />

        <TextView
            android:id="@+id/tvPressureValue"
            style="@style/text_view_wrap_medium"
            android:layout_marginTop="@dimen/size_16"
            android:layout_marginEnd="@dimen/size_32"
            android:text="@{String.valueOf(response.main.pressure)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvHumidityValue" />

        <androidx.constraintlayout.widget.ConstraintLayout
            style="@style/match_wrap"
            android:layout_marginTop="@dimen/size_16"
            android:background="@color/teal_200"
            android:paddingBottom="@dimen/size_16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPressureValue">

            <TextView
                android:id="@+id/tvWindSpeed"
                style="@style/text_view_wrap"
                android:layout_marginStart="@dimen/size_32"
                android:layout_marginTop="@dimen/size_16"
                android:text="@string/wind_speed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvWindSpeedValue"
                style="@style/text_view_wrap_medium"
                android:layout_marginTop="@dimen/size_16"
                android:layout_marginEnd="@dimen/size_32"
                android:text="@{Utils.getWindSpeedByKPHr(context,response.wind.speed)}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvWindDeg"
                style="@style/text_view_wrap"
                android:layout_marginStart="@dimen/size_32"
                android:layout_marginTop="@dimen/size_16"
                android:text="@string/wind_degree"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvWindSpeed" />

            <TextView
                android:id="@+id/tvWindDegValue"
                style="@style/text_view_wrap_medium"
                android:layout_marginTop="@dimen/size_16"
                android:layout_marginEnd="@dimen/size_32"
                android:text="@{String.valueOf(response.wind.deg)}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvWindSpeedValue" />

            <TextView
                android:id="@+id/tvWindGust"
                style="@style/text_view_wrap"
                android:layout_marginStart="@dimen/size_32"
                android:layout_marginTop="@dimen/size_16"
                android:text="@string/wind_gust"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvWindDeg" />

            <TextView
                android:id="@+id/tvWindGustValue"
                style="@style/text_view_wrap_medium"
                android:layout_marginTop="@dimen/size_16"
                android:layout_marginEnd="@dimen/size_32"
                android:text="@{String.valueOf(response.wind.gust)}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvWindDegValue" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>